fdo#42624: Defer formula token conversion for defined names (xls import).

This is necessary for handling names that cross-reference each other.